--- a/.vim_simple_rc
+++ b/.vim_simple_rc
@@ -125,3 +125,4 @@ runtime plugin/visualmark.vim
 runtime plugin/AsNeeded.vim
 runtime plugin/ANcmds.vim
 runtime plugin/foldutil.vim
+runtime plugin/AlignPlugin.vim
