--- a/.w3m/config
+++ b/.w3m/config
@@ -35,9 +35,9 @@ noproxy_netaddr 0
 no_proxy 
 ftp_proxy 
 gopher_proxy 
-https_proxy 
-http_proxy 
-use_proxy 1
+https_proxy https://127.0.0.1:8118/
+http_proxy http://127.0.0.1:8118/
+use_proxy 0
 max_news 50
 nntpmode 
 nntpserver 
