update screen config files

--- a/screenrc.local.example
+++ b/screenrc.local.example
@@ -1,5 +1,8 @@
 # open more windows at startup
 screen -t mail 1 /bin/bash -c 'if [ $(hostname) == "vincent" ]; then mutt; fi'
+screen -t sandbox 2
+screen -t work 3
+screen -t chroot 4
 screen -t ipython 5 ipython 
 screen -t w3m 6 w3m www.google.com
 ### the following config worked during the renovation of exoweb's office 
