--- a/.screenrc
+++ b/.screenrc
@@ -131,6 +131,48 @@ idle 420 eval "screen cmatrix -f -o -u 10" "idle 0"
 #blankerprg cmatrix -f -o -u 10
 #idle 420
 
+#
+# Settings only work ver 4.00.3+
+#
+bind + resize -v +3
+bind _ resize -v -3
+
+#
+# Bind sessions 10-19 to Shift-0, Shift-1.. etc..
+#
+bind ) select 10
+bind ! select 11
+bind @ select 12
+bind # select 13
+bind $ select 14
+bind % select 15
+bind ^ select 16
+bind & select 17
+bind * select 18
+bind ( select 19
+
+# settings about layout
+layout new
+bind y command -c layout
+bind -c layout y    layout next
+bind -c layout ' '  layout next
+#bind -c layout    layout prev
+bind -c layout n    layout next
+bind -c layout p    layout prev
+bind -c layout 0    layout select 0
+bind -c layout 1    layout select 1
+bind -c layout 2    layout select 2
+bind -c layout 3    layout select 3
+bind -c layout 4    layout select 4
+bind -c layout 5    layout select 5
+bind -c layout 6    layout select 6
+bind -c layout 7    layout select 7
+bind -c layout 8    layout select 8
+bind -c layout 9    layout select 9
+bind -c layout \'   layout select
+bind -c layout ?    layout show
+bind -c layout i    layout number
+bind -c layout c    layout new
 
 # ------------------------------------------------------------------------------
 # STARTUP SCREENS
