update config files from macbook, pretty many files modified, including mutt configs, vim configs etc

--- a/.irssi/config
+++ b/.irssi/config
@@ -308,7 +308,7 @@ settings = {
     expand_escapes = "yes";
     hilight_nick_matches = "yes";
   };
-  "fe-text" = { autostick_split_windows = "no"; };
+  "fe-text" = { autostick_split_windows = "no"; actlist_sort = "refnum"; };
   "fe-common/irc" = { show_away_once = "no"; };
   "irc/core" = { alternate_nick = "vincent@china"; };
   "perl/core/scripts" = {
